--- a/app.css
+++ b/app.css
@@ -9,7 +9,7 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    min-height: 140vh;
+    min-height: 145vh;
 
     font-family: 'Kumbh Sans', sans-serif;
     color: hsl(238, 29%, 16%);
@@ -113,6 +113,11 @@ details p {
 
 /* ---------- DESKTOP VIEW ------------- */
 @media (min-width: 900px) {
+
+    body {
+        min-height: 100vh;
+
+    }
 
     .container {
         max-width: 900px;
